--- a/app/src/main/res/layout/activity_launch.xml
+++ b/app/src/main/res/layout/activity_launch.xml
@@ -6,4 +6,9 @@
     android:layout_height="match_parent"
     tools:context=".LaunchActivity">
 
+    <Button
+        android:id="@+id/goLogin"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Button" />
 </androidx.constraintlayout.widget.ConstraintLayout>
